--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	
 	</head>
 <body>
-	Jessica Leal Barcenas<br/>2022090471
+	<h1>Jessica Leal Barcenas</h1><br/><h2>2022090471</h2></br><h3>edad:16 años</h3>
 </body>
 </html>
